--- a/ch_results.tex
+++ b/ch_results.tex
@@ -343,50 +343,74 @@ In all cases, the hyperparameter configuration with highest cross-validated $ROC
 %Due to time constraints limited by the use of full cross validation fitting procedures, not all models were run for all of the tasks.
 The following table shows the best-fit classifier's performance across three scores on the test set $\mathcal{T_s}$: $Accuracy$, $F1$ and $ROC AUC$.
 
-\begin{table}
-\caption{Master resutls table comparing results for all of the classifiers run in this work.
-For each task and classifer, we show the its $Accuracy$, $ROC AUC$ and $F1$ test-set scores, along with the runtimes of a full cross validation procedures on the learner.}
-\label{tab:master_table_results}
-\centering
-    \begin{tabular*}{0.9\textwidth}{@{\extracolsep{\fill} }  l l l l l }
-    %{|p{2cm}|p{2cm}|p{1.5cm}|p{1cm}|p{1.5cm}}
-    \toprule
-    Measure & Problem 1 & Problem 2 & Problem 3 & Problem 4  \\
-    \midrule
-    Naive Bayes     & (0.84,0.82,0.75)  & (0.64,0.61,0.41)  &  (0.65,0.63,0.45)   & (0.75,0.76,0.62)   \\
-    Logistic Classifier   & (0.893,0.857,0.9)  & (0.71,0.72,0.248)  &  (0.705,0.754,0.307)   & (0.883,0.85,0.331)   \\
-    Random Forest   & (0.878,0.857,0.9)  & (0.79,0.776,0.278)  &  (0.792,0.845,0.346)   & (0.898,0.853,0.393)   \\
-    Gradient Boosting   & (0.974,0.978,0.952)  & (0.838,0.819,0.291)  &  (0.811,0.855,0.359)   & (0.885,0.873,0.384)   \\
-%$Naive Bayes$               & 0.84  & 0.82  & 0.75  & 2  && 0.64  & 0.61  & 0.31  & 2  && 0.65   & 0.63  & 0.45  & 1   && 0.85  & 0.76  & 0.62 & 1 \\
-%$Logistic \ Regression$     & 0.893 & 0.857 & 0.9   & 96 && 0.714 & 0.726 & 0.248 & 119 && 0.705 & 0.754 & 0.307 & 115 && 0.883 & 0.85  & 0.331 & 106 \\
-%$Random \ Forest$            & 0.878 & 0.857 & 0.9  & 33 && 0.79  & 0.776 & 0.278 & 45  && 0.792 & 0.845 & 0.346 & 21  && 0.898 & 0.853 & 0.393 & 19\\
-%$Gradient \ Tree \ Boosting$ & 0.974 & 0.978 & 0.952 & 41 && 0.838 & 0.819 & 0.291 & 54  && 0.811 & 0.855 & 0.359 & 33  && 0.885 & 0.873 & 0.384 & 47 \\
 
-    \bottomrule
-    \end{tabular*}
-\end{table}
+%% OLD UGLY TABLE
+% \begin{table}
+% \caption{Master resutls table comparing results for all of the classifiers run in this work.
+% For each task and classifer, we show the its $Accuracy$, $ROC AUC$ and $F1$ test-set scores, along with the runtimes of a full cross validation procedures on the learner.}
+% \label{tab:master_table_results}
+% \centering
+%     \begin{tabular*}{0.9\textwidth}{@{\extracolsep{\fill} }  l l l l l }
+%     %{|p{2cm}|p{2cm}|p{1.5cm}|p{1cm}|p{1.5cm}}
+%     \toprule
+%     Measure & Problem 1 & Problem 2 & Problem 3 & Problem 4  \\
+%     \midrule
+%     Naive Bayes     & (0.84,0.82,0.75)  & (0.64,0.61,0.41)  &  (0.65,0.63,0.45)   & (0.75,0.76,0.62)   \\
+%     Logistic Classifier   & (0.893,0.857,0.9)  & (0.71,0.72,0.248)  &  (0.705,0.754,0.307)   & (0.883,0.85,0.331)   \\
+%     Random Forest   & (0.878,0.857,0.9)  & (0.79,0.776,0.278)  &  (0.792,0.845,0.346)   & (0.898,0.853,0.393)   \\
+%     Gradient Boosting   & (0.974,0.978,0.952)  & (0.838,0.819,0.291)  &  (0.811,0.855,0.359)   & (0.885,0.873,0.384)   \\
+% %$Naive Bayes$               & 0.84  & 0.82  & 0.75  & 2  && 0.64  & 0.61  & 0.31  & 2  && 0.65   & 0.63  & 0.45  & 1   && 0.85  & 0.76  & 0.62 & 1 \\
+% %$Logistic \ Regression$     & 0.893 & 0.857 & 0.9   & 96 && 0.714 & 0.726 & 0.248 & 119 && 0.705 & 0.754 & 0.307 & 115 && 0.883 & 0.85  & 0.331 & 106 \\
+% %$Random \ Forest$            & 0.878 & 0.857 & 0.9  & 33 && 0.79  & 0.776 & 0.278 & 45  && 0.792 & 0.845 & 0.346 & 21  && 0.898 & 0.853 & 0.393 & 19\\
+% %$Gradient \ Tree \ Boosting$ & 0.974 & 0.978 & 0.952 & 41 && 0.838 & 0.819 & 0.291 & 54  && 0.811 & 0.855 & 0.359 & 33  && 0.885 & 0.873 & 0.384 & 47 \\
 
+%     \bottomrule
+%     \end{tabular*}
+% \end{table}
 
-\todo{Bigger, better and more esthetically pleasing table is commented in the code below this one. Yet the commented table does not fit in a whole page and spawns compilation errors. This could be fixed by splitting the table in half.}
+\begin{landscape}% Landscape page
+			% RAW NON TABLE SYNTHAXED VALUES
+%			$Naive Bayes$               & 0.84  & 0.82  & 0.75  & 2  && 0.64  & 0.61  & 0.31  & 2  && 0.65   & 0.63  & 0.45  & 1   && 0.85  & 0.76  & 0.62 & 1 \\
+			% $Logistic \ Regression$     & 0.893 & 0.857 & 0.9   & 96 && 0.714 & 0.726 & 0.248 & 119 && 0.705 & 0.754 & 0.307 & 115 && 0.883 & 0.85  & 0.331 & 106 \\
+			% $Random \ Forest$            & 0.878 & 0.857 & 0.9  & 33 && 0.79  & 0.776 & 0.278 & 45  && 0.792 & 0.845 & 0.346 & 21  && 0.898 & 0.853 & 0.393 & 19\\
+			% $Gradient \ Tree \ Boosting$ & 0.974 & 0.978 & 0.952 & 41 && 0.838 & 0.819 & 0.291 & 54  && 0.811 & 0.855 & 0.359 & 33  && 0.885 & 0.873 & 0.384 & 47 \\
 
-% \begin{landscape}% Landscape page
-%         \begin{table*}
-%             \centering
-%             \ra{1.3}
-%             \begin{tabular}{@{}rrrrcrrrrcrrcrr@{}} \toprule
-%                 &  \multicolumn{4}{c}{Problem 1} &  \multicolumn{4}{c}{Problem 2} & \multicolumn{4}{c}{Problem 3}  & \multicolumn{4}{c}{Problem 4}\\
-%                  \cmidrule{2-5} \cmidrule{6-9} \cmidrule{10-13} \cmidrule{14-17}
-%                 & $Accuracy$ & $AUC$ & $F1$ & $Runtime (m)$ && $Accuracy$ & $AUC$ & $F1$ & $Runtime (m)$ && $Accuracy$ & $AUC$ & $F1$ & $Runtime (m)$ && $Accuracy$ & $AUC$ & $F1$ & $Runtime (m)$ \\
-%                 \midrule
-%                   $Naive Bayes$               & 0.84  & 0.82  & 0.75  & 2  && 0.64  & 0.61  & 0.31  & 2  && 0.65   & 0.63  & 0.45  & 1   && 0.85  & 0.76  & 0.62 & 1 \\
-%                   $Logistic \ Regression$     & 0.893 & 0.857 & 0.9   & 96 && 0.714 & 0.726 & 0.248 & 119 && 0.705 & 0.754 & 0.307 & 115 && 0.883 & 0.85  & 0.331 & 106 \\
-%                   $Random \ Forest$            & 0.878 & 0.857 & 0.9  & 33 && 0.79  & 0.776 & 0.278 & 45  && 0.792 & 0.845 & 0.346 & 21  && 0.898 & 0.853 & 0.393 & 19\\
-%                   $Gradient \ Tree \ Boosting$ & 0.974 & 0.978 & 0.952 & 41 && 0.838 & 0.819 & 0.291 & 54  && 0.811 & 0.855 & 0.359 & 33  && 0.885 & 0.873 & 0.384 & 47 \\
-%                 \bottomrule
-%             \end{tabular}
-%             \caption{Caption}
-%         \end{table*}
-% \end{landscape}
+	\begin{table*}\centering
+	\hskip-4.0cm\caption{Master results table comparing results for all of the classifiers run in this work.
+			For each task and classifer, we show the its $Accuracy$, $ROC AUC$ and $F1$ test-set scores, along with the runtimes of a full cross validation procedures on the learner.}\label{tab:master_table_results}
+		\ra{1.3}
+		\hskip-4.0cm\begin{tabular}{@{}rrrrrcrrrr@{}} \toprule	
+			&  \multicolumn{4}{c}{Problem 1} &  \phantom{abc} & \multicolumn{4}{c}{Problem 2} \\
+			\cmidrule{2-5} \cmidrule{7-10} 
+			& $Accuracy$ & $ROC AUC$ & $F1$ & $Runtime$ $$ && $Accuracy$ & $ROC AUC$ & $F1$ & $Runtime$ \\ \midrule
+			$Naive Bayes$               & 0.84  & 0.82  & 0.75  & 2  && 0.64  & 0.61  & 0.31  & 2   \\
+			$Logistic \ Regression$     & 0.893 & 0.857 & 0.9   & 96 && 0.714 & 0.726 & 0.248 & 119 \\			
+			$Random \ Forest$            & 0.878 & 0.857 & 0.9  & 33 && 0.79  & 0.776 & 0.278 & 45  \\
+			$Gradient \ Tree \ Boosting$ & 0.974 & 0.978 & 0.952 & 41 && 0.838 & 0.819 & 0.291 & 54 \\
+
+			\bottomrule
+		\end{tabular}
+	\end{table*}
+	\addtocounter{table}{-1} % This dirty hack will fake both tables as if they were the same one.
+
+	\begin{table*}\centering
+      \hskip-4.0cm\caption{Master resutls table comparing results for all of the classifiers run in this work.
+			For each task and classifer, we show the its $Accuracy$, $ROC AUC$ and $F1$ test-set scores, along with the runtimes of a full cross validation procedures on the learner.}
+		\ra{1.3}
+		\hskip-4.0cm\begin{tabular}{@{}rrrrrcrrrr@{}} \toprule	
+			&  \multicolumn{4}{c}{Problem 3} &  \phantom{abc} & \multicolumn{4}{c}{Problem 4} \\
+			\cmidrule{2-5} \cmidrule{7-10} %\cmidrule{10-12}
+			& $Accuracy$ & $ROC AUC$ & $F1$ & $Runtime$ $$ && $Accuracy$ & $ROC AUC$ & $F1$ & $Runtime$ \\ \midrule
+			$Naive Bayes$                & 0.65  & 0.63  & 0.45  & 1   && 0.85  & 0.76  & 0.62 & 1 \\
+			$Logistic \ Regression$      & 0.705 & 0.754 & 0.307 & 115 && 0.883 & 0.85  & 0.331 & 106 \\			
+			$Random \ Forest$            & 0.792 & 0.845 & 0.346 & 21  && 0.898 & 0.853 & 0.393 & 19\\
+			$Gradient \ Tree \ Boosting$ & 0.811 & 0.855 & 0.359 & 33  && 0.885 & 0.873 & 0.384 & 47 \\
+			\bottomrule
+		\end{tabular}
+	\end{table*}
+	
+\end{landscape}
+
 
 
 \cref{tab:master_table_results} exposes all combinations in model performance and runtime across the problems studied for this work.
