--- a/preamble.tex
+++ b/preamble.tex
@@ -131,6 +131,8 @@ height=21cm,top=3.7cm,headsep=1cm,footskip=1.1cm]{geometry}
 % \usepackage{longtable}        % Allows to break tables through pages
 % \floatsetup[longtable]{margins=centering,LTcapwidth=table}
 
+% to build master table
+\newcommand{\ra}[1]{\renewcommand{\arraystretch}{#1}}
 
 %---------------------------------------------------------+
 % Miscellaneous packages: lists, setspace, todonotes, etc |
