--- a/trash.tex
+++ b/trash.tex
@@ -59,13 +59,13 @@ eprint=false
 \usepackage[table,x11names]{xcolor}
 
 
-\newcommand\MyBox[2]{
-\fbox{\lower0.75cm
-	\vbox to 1.7cm{\vfil
-		\hbox to 1.7cm{\hfil\parbox{1.4cm}{#1\\#2}\hfil}
-		\vfil}%
-}%
-}
+% \newcommand\MyBox[2]{
+% \fbox{\lower0.75cm
+% 	\vbox to 1.7cm{\vfil
+% 		\hbox to 1.7cm{\hfil\parbox{1.4cm}{#1\\#2}\hfil}
+% 		\vfil}%
+% }%
+% }
 
 % to build master table
 \newcommand{\ra}[1]{\renewcommand{\arraystretch}{#1}}
@@ -146,32 +146,18 @@ eprint=false
 
 \end{abstract} 
 
-\begin{tabular}{|*{16}{c|}}  % repeats {c|} 18 times
-	\hline
-	\multicolumn{4}{|c}{Problem1} & \multicolumn{4}{|c|}{Problem 2} \\ \hline 
-%	& \multicolumn{4}{|c|}{Problem 3} & \multicolumn{4}{|c|}{Problem 4} \\ \hline
-	\multicolumn{1}{|c}{$Accuracy$} & \multicolumn{1}{|c|}{$AUC$} & \multicolumn{1}{|c|}{$F1$} & \multicolumn{1}{c|}{$Runtime$} & 
-	\multicolumn{1}{|c}{$Accuracy$} & \multicolumn{1}{|c|}{$AUC$} & \multicolumn{1}{|c|}{$F1$} & \multicolumn{1}{c|}{$Runtime$}
-	\\ \hline 
-	1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 \\ \hline
-	
-%	& SVD & CJ & HT & SVD & CJ & HT & SVD &CJ \\ \hline
-%	& & & & & & & & & & & & & & & & &  \\ \hline
-\end{tabular}
-
-
-\bigskip
-
-
-%\begin{tabular}{|*{18}{c|}}  % repeats {c|} 18 times
+%\begin{tabular}{|*{16}{c|}}  % repeats {c|} 18 times
 %	\hline
-%	\multicolumn{9}{|c}{k-means clustering} & \multicolumn{9}{|c|}{Fuzzy c-means clustering} \\ \hline
-%	\multicolumn{3}{|c}{50 clusters} & \multicolumn{3}{|c}{60 clusters} & \multicolumn{3}{|c}{70 clusters} & 
-%	\multicolumn{3}{|c}{50 clusters} & \multicolumn{3}{|c}{60 clusters} & \multicolumn{3}{|c|}{70 clusters} \\ \hline 
-%	CJ & HT & SVD &CJ & HT & SVD &CJ & HT & SVD &CJ & HT & SVD &CJ & HT & SVD &CJ & HT & SVD \\ \hline
-%	& & & & & & & & & & & & & & & & &  \\ \hline
+%	\multicolumn{4}{|c}{Problem1} & \multicolumn{4}{|c|}{Problem 2} \\ \hline 
+%%	& \multicolumn{4}{|c|}{Problem 3} & \multicolumn{4}{|c|}{Problem 4} \\ \hline
+%	\multicolumn{1}{|c}{$Accuracy$} & \multicolumn{1}{|c|}{$AUC$} & \multicolumn{1}{|c|}{$F1$} & \multicolumn{1}{c|}{$Runtime$} & 
+%	\multicolumn{1}{|c}{$Accuracy$} & \multicolumn{1}{|c|}{$AUC$} & \multicolumn{1}{|c|}{$F1$} & \multicolumn{1}{c|}{$Runtime$}
+%	\\ \hline 
+%	1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 \\ \hline
+%	
+%%	& SVD & CJ & HT & SVD & CJ & HT & SVD &CJ \\ \hline
+%%	& & & & & & & & & & & & & & & & &  \\ \hline
 %\end{tabular}
-%
 
 
 \bigskip
@@ -180,49 +166,121 @@ eprint=false
 %\usepackage{pdflscape}
 %\usepackage{booktabs}
 %\newcommand{\ra}[1]{\renewcommand{\arraystretch}{#1}}
+%
+%\begin{landscape}% Landscape page
+%		\begin{table*}
+%			\centering
+%			\ra{1.3}
+%			\begin{tabular}{@{}rrrrcrrrrcrrcrr@{}} \toprule
+%				&  \multicolumn{4}{c}{Problem 1} &  \multicolumn{4}{c}{Problem 2} & \multicolumn{4}{c}{Problem 3}  & \multicolumn{4}{c}{Problem 4}\\
+%				 \cmidrule{2-5} \cmidrule{6-9} \cmidrule{10-13} \cmidrule{14-17}
+%				& $Accuracy$ & $AUC$ & $F1$ & $Runtime (m)$ && $Accuracy$ & $AUC$ & $F1$ & $Runtime (m)$ && $Accuracy$ & $AUC$ & $F1$ & $Runtime (m)$ && $Accuracy$ & $AUC$ & $F1$ & $Runtime (m)$ \\
+%				\midrule
+%				$Naive Bayes$               & 0.84  & 0.82  & 0.75  & 2  && 0.64  & 0.61  & 0.31  & 2  && 0.65   & 0.63  & 0.45  & 1   && 0.85  & 0.76  & 0.62 & 1 \\
+%				$Logistic \ Regression$     & 0.893 & 0.857 & 0.9   & 96 && 0.714 & 0.726 & 0.248 & 119 && 0.705 & 0.754 & 0.307 & 115 && 0.883 & 0.85  & 0.331 & 106 \\
+%				$Random \ Forest$            & 0.878 & 0.857 & 0.9  & 33 && 0.79  & 0.776 & 0.278 & 45  && 0.792 & 0.845 & 0.346 & 21  && 0.898 & 0.853 & 0.393 & 19\\
+%				$Gradient \ Tree \ Boosting$ & 0.974 & 0.978 & 0.952 & 41 && 0.838 & 0.819 & 0.291 & 54  && 0.811 & 0.855 & 0.359 & 33  && 0.885 & 0.873 & 0.384 & 47 \\
+%				\bottomrule
+%			\end{tabular}
+%			\caption{Caption}
+%		\end{table*}	
+%\end{landscape}
+
+
+%\begin{landscape}% Landscape page
+%	\begin{table*}
+%		\centering
+%		\ra{1.3}
+%		\begin{tabular}{@{}rrrrcrrrrcrrcrr@{}} \toprule
+%			&  \multicolumn{4}{c}{Problem 1} &  \multicolumn{4}{c}{Problem 2} & \multicolumn{4}{c}{Problem 3}  & \multicolumn{4}{c}{Problem 4}\\
+%			\cmidrule{2-5} \cmidrule{6-9} \cmidrule{10-13} \cmidrule{14-17}
+%			& $Accuracy$ & $AUC$ & $F1$ & $Runtime (m)$ && $Accuracy$ & $AUC$ & $F1$ & $Runtime (m)$ && $Accuracy$ & $AUC$ & $F1$ & $Runtime (m)$ && $Accuracy$ & $AUC$ & $F1$ & $Runtime (m)$ \\
+%			\midrule
+%			$Naive Bayes$               & 0.84  & 0.82  & 0.75  & 2  && 0.64  & 0.61  & 0.31  & 2  && 0.65   & 0.63  & 0.45  & 1   && 0.85  & 0.76  & 0.62 & 1 \\
+%			$Logistic \ Regression$     & 0.893 & 0.857 & 0.9   & 96 && 0.714 & 0.726 & 0.248 & 119 && 0.705 & 0.754 & 0.307 & 115 && 0.883 & 0.85  & 0.331 & 106 \\
+%			$Random \ Forest$            & 0.878 & 0.857 & 0.9  & 33 && 0.79  & 0.776 & 0.278 & 45  && 0.792 & 0.845 & 0.346 & 21  && 0.898 & 0.853 & 0.393 & 19\\
+%			$Gradient \ Tree \ Boosting$ & 0.974 & 0.978 & 0.952 & 41 && 0.838 & 0.819 & 0.291 & 54  && 0.811 & 0.855 & 0.359 & 33  && 0.885 & 0.873 & 0.384 & 47 \\
+%			\bottomrule
+%		\end{tabular}
+%		\caption{Caption}
+%	\end{table*}
+%\end{landscape}
+%
+
+
 
 \begin{landscape}% Landscape page
-		\begin{table*}
-			\centering
-			\ra{1.3}
-			\begin{tabular}{@{}rrrrcrrrrcrrcrr@{}} \toprule
-				&  \multicolumn{4}{c}{Problem 1} &  \multicolumn{4}{c}{Problem 2} & \multicolumn{4}{c}{Problem 3}  & \multicolumn{4}{c}{Problem 4}\\
-				 \cmidrule{2-5} \cmidrule{6-9} \cmidrule{10-13} \cmidrule{14-17}
-				& $Accuracy$ & $AUC$ & $F1$ & $Runtime (m)$ && $Accuracy$ & $AUC$ & $F1$ & $Runtime (m)$ && $Accuracy$ & $AUC$ & $F1$ & $Runtime (m)$ && $Accuracy$ & $AUC$ & $F1$ & $Runtime (m)$ \\ 
-				\midrule
-				$Naive Bayes$ & 0.84 & 0.82 & 0.75 & 2 && 0.64 & 0.61 & 0.31 & 2 && 0.65 & 0.63 & 0.45 & 1 && 0.85 & 0.76 & 0.62 & 1 \\
-				$Logistic \ Regression$ & 0.893 & 0.857 & 0.9 & 96 && 0.714& 0.726 & 0.058  & 119 && 0.705& 0.754 & 0.107 & 115 && 0.883 & 0.85 & 0.181 & 66 \\
-				$Random \ Forest$ & 0.878 & 0.903 & 0.77 & 33  && 0.79 & 0.776 & 0.088 & 45 && 0.792 & 0.845 & 0.156 & 21 && 0.898 & 0.853 & 0.203 &  19\\
-				$Gradient \ Tree \ Boosting$  & 0.974 & 0.978 & 0.952 & 41 && 0.838 & 0.819 &  0.101 & 54  && 0.811 & 0.855 & 0.169 & 33 && 0.885 & 0.873  & 0.194 & 47 \\
-				\bottomrule
-			\end{tabular}
-			\caption{Caption}
-		\end{table*}	
+			% RAW NON TABLE SYNTHAXED VALUES
+%			$Naive Bayes$               & 0.84  & 0.82  & 0.75  & 2  && 0.64  & 0.61  & 0.31  & 2  && 0.65   & 0.63  & 0.45  & 1   && 0.85  & 0.76  & 0.62 & 1 \\
+			% $Logistic \ Regression$     & 0.893 & 0.857 & 0.9   & 96 && 0.714 & 0.726 & 0.248 & 119 && 0.705 & 0.754 & 0.307 & 115 && 0.883 & 0.85  & 0.331 & 106 \\
+			% $Random \ Forest$            & 0.878 & 0.857 & 0.9  & 33 && 0.79  & 0.776 & 0.278 & 45  && 0.792 & 0.845 & 0.346 & 21  && 0.898 & 0.853 & 0.393 & 19\\
+			% $Gradient \ Tree \ Boosting$ & 0.974 & 0.978 & 0.952 & 41 && 0.838 & 0.819 & 0.291 & 54  && 0.811 & 0.855 & 0.359 & 33  && 0.885 & 0.873 & 0.384 & 47 \\
+
+	\begin{table*}\centering
+	\hskip-4.0cm\caption{Master results table comparing results for all of the classifiers run in this work.
+			For each task and classifer, we show the its $Accuracy$, $ROC AUC$ and $F1$ test-set scores, along with the runtimes of a full cross validation procedures on the learner.}\label{tab:master_table_results}
+		\ra{1.3}
+		\hskip-4.0cm\begin{tabular}{@{}rrrrrcrrrr@{}} \toprule	
+			&  \multicolumn{4}{c}{Problem 1} &  \phantom{abc} & \multicolumn{4}{c}{Problem 2} \\
+			\cmidrule{2-5} \cmidrule{7-10} 
+			& $Accuracy$ & $ROC AUC$ & $F1$ & $Runtime$ $$ && $Accuracy$ & $ROC AUC$ & $F1$ & $Runtime$ \\ \midrule
+			$Naive Bayes$               & 0.84  & 0.82  & 0.75  & 2  && 0.64  & 0.61  & 0.31  & 2   \\
+			$Logistic \ Regression$     & 0.893 & 0.857 & 0.9   & 96 && 0.714 & 0.726 & 0.248 & 119 \\			
+			$Random \ Forest$            & 0.878 & 0.857 & 0.9  & 33 && 0.79  & 0.776 & 0.278 & 45  \\
+			$Gradient \ Tree \ Boosting$ & 0.974 & 0.978 & 0.952 & 41 && 0.838 & 0.819 & 0.291 & 54 \\
+
+			\bottomrule
+		\end{tabular}
+	\end{table*}
+	\addtocounter{table}{-1} % This dirty hack will fake both tables as if they were the same one.
+
+	\begin{table*}\centering
+      \hskip-4.0cm\caption{Master resutls table comparing results for all of the classifiers run in this work.
+			For each task and classifer, we show the its $Accuracy$, $ROC AUC$ and $F1$ test-set scores, along with the runtimes of a full cross validation procedures on the learner.}
+		\ra{1.3}
+		\hskip-4.0cm\begin{tabular}{@{}rrrrrcrrrr@{}} \toprule	
+			&  \multicolumn{4}{c}{Problem 3} &  \phantom{abc} & \multicolumn{4}{c}{Problem 4} \\
+			\cmidrule{2-5} \cmidrule{7-10} %\cmidrule{10-12}
+			& $Accuracy$ & $ROC AUC$ & $F1$ & $Runtime$ $$ && $Accuracy$ & $ROC AUC$ & $F1$ & $Runtime$ \\ \midrule
+			$Naive Bayes$                & 0.65  & 0.63  & 0.45  & 1   && 0.85  & 0.76  & 0.62 & 1 \\
+			$Logistic \ Regression$      & 0.705 & 0.754 & 0.307 & 115 && 0.883 & 0.85  & 0.331 & 106 \\			
+			$Random \ Forest$            & 0.792 & 0.845 & 0.346 & 21  && 0.898 & 0.853 & 0.393 & 19\\
+			$Gradient \ Tree \ Boosting$ & 0.811 & 0.855 & 0.359 & 33  && 0.885 & 0.873 & 0.384 & 47 \\
+			\bottomrule
+		\end{tabular}
+	\end{table*}
+	
 \end{landscape}
+
 	
 \bigskip
 
 
 
-%\usepackage{booktabs}
-%\newcommand{\ra}[1]{\renewcommand{\arraystretch}{#1}}
-\begin{table*}\centering
-	\ra{1.3}
-	\begin{tabular}{@{}rrrrcrrrcrrr@{}} \toprule
-		&  \multicolumn{3}{c}{$w = 8$} &  \phantom{abc} & \multicolumn{3}{c}{$w = 16$} & \phantom{abc} & \multicolumn{3}{c}{$w = 32$}\\
-		\cmidrule{2-4} \cmidrule{6-8} \cmidrule{10-12} 
-		& $t=0$ & $t=1$ & $t=2$ && $t=0$ & $t=1$ & $t=2$ && $t=0$ & $t=1$ & $t=2$\\ \midrule
-		$dir=1$\\
-		$c$ & 0.0790 & 0.1692 & 0.2945 && 0.3670 & 0.7187 & 3.1815 && -1.0032 & -1.7104 & -21.7969\\
-		$c$ & -0.8651& 50.0476& 5.9384 && -9.0714& 297.0923& 46.2143&& 4.3590& 34.5809& 76.9167\\
-		$c$ & 124.2756& -50.9612&-14.2721&& 128.2265& -630.5455& -381.0930&& -121.0518& -137.1210& -220.2500\\
-		$dir=0$\\
-		$c$ & 0.0357& 1.2473& 0.2119&& 0.3593& -0.2755& 2.1764&& -1.2998& -3.8202& -1.2784\\
-		$c$ & -17.9048& -37.1111& 8.8591&& -30.7381& -9.5952& -3.0000&& -11.1631& -5.7108& -15.6728\\
-		$c$ & 105.5518& 232.1160& -94.7351&& 100.2497& 141.2778& -259.7326&& 52.5745& 10.1098& -140.2130\\
-		\bottomrule
-	\end{tabular}
-	\caption{Master cross table on all best-fit learners for all four migration problems}
-\end{table*}
+
+\begin{landscape}% Landscape page
+	%\usepackage{booktabs}
+	%\newcommand{\ra}[1]{\renewcommand{\arraystretch}{#1}}
+	\begin{table*}\centering
+		\ra{1.3}
+		\begin{tabular}{@{}rrrrcrrrcrrr@{}} \toprule
+			&  \multicolumn{3}{c}{$w = 8$} &  \phantom{abc} & \multicolumn{3}{c}{$w = 16$} & \phantom{abc} & \multicolumn{3}{c}{$w = 32$}\\
+			\cmidrule{2-4} \cmidrule{6-8} \cmidrule{10-12} 
+			& $t=0$ & $t=1$ & $t=2$ && $t=0$ & $t=1$ & $t=2$ && $t=0$ & $t=1$ & $t=2$\\ \midrule
+			$dir=1$\\
+			$c$ & 0.0790 & 0.1692 & 0.2945 && 0.3670 & 0.7187 & 3.1815 && -1.0032 & -1.7104 & -21.7969\\
+			$c$ & -0.8651& 50.0476& 5.9384 && -9.0714& 297.0923& 46.2143&& 4.3590& 34.5809& 76.9167\\
+			$c$ & 124.2756& -50.9612&-14.2721&& 128.2265& -630.5455& -381.0930&& -121.0518& -137.1210& -220.2500\\
+			$dir=0$\\
+			$c$ & 0.0357& 1.2473& 0.2119&& 0.3593& -0.2755& 2.1764&& -1.2998& -3.8202& -1.2784\\
+			$c$ & -17.9048& -37.1111& 8.8591&& -30.7381& -9.5952& -3.0000&& -11.1631& -5.7108& -15.6728\\
+			$c$ & 105.5518& 232.1160& -94.7351&& 100.2497& 141.2778& -259.7326&& 52.5745& 10.1098& -140.2130\\
+			\bottomrule
+		\end{tabular}
+		\caption{Master cross table on all best-fit learners for all four migration problems}
+	\end{table*}
+	
+	
+\end{landscape}
 
 \end{document}
